<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_1"
            android:icon="@drawable/ico_partido"
            android:title="@string/menuitem_1" />
        <item
            android:id="@+id/nav_2"
            android:icon="@drawable/ico_multimedia"
            android:title="@string/menuitem_2" />
        <item
            android:id="@+id/nav_3"
            android:icon="@drawable/ico_narracion"
            android:title="@string/menuitem_3" />
        <item
            android:id="@+id/nav_4"
            android:icon="@drawable/ico_foro"
            android:title="@string/menuitem_4" />
        <item
            android:id="@+id/nav_5"
            android:icon="@drawable/ico_calendario"
            android:title="@string/menuitem_5" />
        <item
            android:id="@+id/nav_6"
            android:icon="@drawable/ico_mecateadero"
            android:title="@string/menuitem_6" />
        <item
            android:id="@+id/nav_7"
            android:icon="@drawable/ico_ciudad"
            android:title="@string/menuitem_7" />
        <item
            android:id="@+id/nav_8"
            android:icon="@drawable/ico_salir"
            android:title="@string/menuitem_8" />
    </group>

</menu>
